Adição das informações do Layout proposto

--- a/assets/css/base/_variaveis.css
+++ b/assets/css/base/_variaveis.css
@@ -16,10 +16,10 @@
     --fonte-tamanho-flipdown-texto: 20px;
 
     
-    --cor-primaria: #0071ea;
-    --cor-secundaria: #d6eaff;
-    --cor-contraste-escuro: #4D4D4D;
-    --cor-contraste-claro: #fff;
+    --cor-primaria: #1e464f;
+    --cor-secundaria: #466b74;
+    --cor-contraste-escuro: #466b74;
+    --cor-contraste-claro: #E5e0ca;
     --cor-aviso: #df2525;
     --cor-sucesso: #047900;
     --cor-transparencia: #4d4d4d33;
