--- a/assets/css/cadastro.css
+++ b/assets/css/cadastro.css
@@ -7,7 +7,7 @@
 }
 
 .cadastro-cabecalho__logo {
-    width: 2.625rem;
+    width: 50px;
     margin-bottom: 0.5rem;
 }
 
@@ -35,7 +35,7 @@
 
 @media(min-width: 800px) {
     .cadastro-cabecalho__logo {
-        width: 5.75rem;
+        width: 500px;
         margin-bottom: 1rem;
     }
 
