--- a/assets/css/base/base.css
+++ b/assets/css/base/base.css
@@ -2,7 +2,7 @@
 @import url(_variaveis.css);
 
 body {
-	background-color: var(--cor-secundaria);
+	background-color: var(--cor-primaria);
 	color: var(--cor-contraste-escuro);
 	font-family: var(--fonte-familia-corpo);
 	overflow-x: hidden;
