--- a/assets/css/componentes/botao.css
+++ b/assets/css/componentes/botao.css
@@ -4,6 +4,7 @@
     border-radius: 7px;
     width: 100%;
     margin-top: 1rem;
+    margin-bottom: 1rem;
     max-width: 20rem;
     padding: 1.125rem;
     box-sizing: border-box;
