--- a/assets/css/componentes/cartao.css
+++ b/assets/css/componentes/cartao.css
@@ -4,7 +4,7 @@
     box-shadow: var(--sombra);
     width: 100%;
     max-width: 45rem;
-    padding: 1.75rem;
+    padding: 1rem;
     box-sizing: border-box;
     margin-bottom: 1rem;
 }
@@ -13,3 +13,11 @@
     font-size: var(--fonte-tamanho-cartao-titulo);
     margin-bottom: 1rem;
 }
+
+
+@media(min-width: 800px) {
+    .cartao {
+        padding: 1.75rem;
+      }
+  }
+  
