--- a/assets/css/componentes/cartao.css
+++ b/assets/css/componentes/cartao.css
@@ -7,12 +7,17 @@
     padding: 1rem;
     box-sizing: border-box;
     margin-bottom: 1rem;
+    margin-bottom: 1rem;
+    text-align: center;
 }
 
 .cartao__titulo {
     font-size: var(--fonte-tamanho-cartao-titulo);
     margin-bottom: 1rem;
+
 }
+
+
 
 
 @media(min-width: 800px) {
