--- a/assets/css/componentes/botao.css
+++ b/assets/css/componentes/botao.css
@@ -1,6 +1,6 @@
 .botao {
     display: block;
-    background-color: var(--cor-primaria);
+    background-color: var(--cor-botao);
     border-radius: 7px;
     width: 100%;
     margin-top: 1rem;
@@ -10,6 +10,7 @@
     box-sizing: border-box;
     color: var(--cor-contraste-claro);
     font-size: var(--fonte-tamanho-botao);
+    font-weight: bold;
     align-self: center;
     text-align: center;
 }
