--- a/assets/css/componentes/pessoa-imagem.css
+++ b/assets/css/componentes/pessoa-imagem.css
@@ -19,8 +19,21 @@
     padding-top: 3rem;
 }
 
+.quemSomos__titulo {  
+text-align: center;
+font-size: 36px;   
+}
 
+.quemsSomos__descricao {
+    margin: 2rem 0;
+    text-align: center;
+    font-size: 20px;
+}
 
+.quemSomos__contato{
+    margin-top: 1rem;
+    font-size: 18px;
+}
 
 @media(max-width: 500px) {
 .pessoa__imagem--stephane {
