--- a/assets/css/componentes/pessoa-imagem.css
+++ b/assets/css/componentes/pessoa-imagem.css
@@ -33,6 +33,7 @@ font-size: 36px;
 .quemSomos__contato{
     margin-top: 1rem;
     font-size: 18px;
+    line-height: 1.5;
 }
 
 @media(max-width: 500px) {
