--- a/assets/css/componentes/pessoa-imagem.css
+++ b/assets/css/componentes/pessoa-imagem.css
@@ -9,7 +9,7 @@
 }
 
 .pessoa__imagem--stephane {
-    background-image: url('/assets/img/pessoa-stephane.jpeg');
+    background-image: url('/assets/img/pessoa-stephane.png');
 }
 
 .quemSomos {
