--- a/assets/css/componentes/pessoa-imagem.css
+++ b/assets/css/componentes/pessoa-imagem.css
@@ -36,6 +36,11 @@ font-size: 36px;
     line-height: 1.5;
 }
 
+#instagram:hover {
+    text-decoration: underline;
+	color: darkorange;
+}
+
 @media(max-width: 500px) {
 .pessoa__imagem--stephane {
     max-height: 200px;
