--- a/assets/css/base/base.css
+++ b/assets/css/base/base.css
@@ -71,14 +71,14 @@ body {
 
 @media(max-width: 400px) {
 	.container--flip {
-		margin-right: 70%;
+		/* margin-right: 70%; */
    			transform: scale(0.8);
 	}
 }
 
 @media(max-width: 340px) {
 	.container--flip {
-		margin-right: 90%;
+		/* margin-right: 90%; */
    			transform: scale(0.7);
 	}
 }
