Ajustes hover e favicon

--- a/assets/css/cadastro.css
+++ b/assets/css/cadastro.css
@@ -57,6 +57,11 @@
     margin-bottom: 2rem;
 }
 
+#mc-embedded-subscribe:hover {
+	background: darkorange;
+    cursor: pointer;
+}
+
 @media(min-width: 800px) {
     .cadastro-cabecalho__logo {
         width: 350px;
