--- a/assets/css/componentes/pessoa-imagem.css
+++ b/assets/css/componentes/pessoa-imagem.css
@@ -16,7 +16,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    padding-top: 3rem;
+    /* padding-top: 3rem; */
 }
 
 .quemSomos__titulo {  
@@ -28,6 +28,12 @@ font-size: 36px;
     margin: 2rem 0;
     text-align: center;
     font-size: 20px;
+}
+
+.quemsSomos__predescricao {
+    margin: 2rem 0 0 0;
+    text-align: center;
+    font-size: 22px;
 }
 
 .quemSomos__contato{
