--- a/assets/css/base/base.css
+++ b/assets/css/base/base.css
@@ -22,7 +22,9 @@ body {
 
 .container--foto {
 	position: relative;
-    width: 80vw;
+	width: 100%;
+    max-width: 45rem;
+    /* width: 80vw; */
     /* height: 0; 
 	padding-bottom: 56.25%; */
 }
@@ -63,12 +65,14 @@ body {
 }
 
 @media(min-width: 800px) {
+
   .container {
-		padding-right: 2.5rem;
-		padding-left: 2.5rem;	
+	  	/* padding: 1rem; */
+		/* padding-right: 1.75rem;
+		padding-left: 1.75rem;	 */
 	}
 	.container--foto {
-		max-width: 80vw;
+		/* max-width: 80vw; */
 		/* width: 30vw; */
 		/* height: 0; 
 		padding-bottom: 56.25%; */
@@ -81,16 +85,12 @@ body {
 		max-width: 40vw;
 	}
 	.container--foto {
-		max-width: 50vw;
+		/* max-width: 50vw; */
 		/* width: 30vw; */
 		/* height: 0; 
 		padding-bottom: 56.25%; */
 	}
 }
-
-
-
-
 
 @media(max-width: 400px) {
 	.container--flip {
