--- a/assets/css/componentes/pessoa-imagem.css
+++ b/assets/css/componentes/pessoa-imagem.css
@@ -19,6 +19,10 @@
     /* padding-top: 3rem; */
 }
 
+.quemSomos p {
+    line-height: 1.5rem;
+}
+
 .quemSomos__titulo {  
 text-align: center;
 font-size: 36px;   
@@ -39,7 +43,7 @@ font-size: 36px;
 .quemSomos__contato{
     margin-top: 1rem;
     font-size: 18px;
-    line-height: 1.5;
+    line-height: 1;
 }
 
 #instagram:hover {
