--- a/assets/css/base/base.css
+++ b/assets/css/base/base.css
@@ -1,6 +1,3 @@
-@import url(_reset.css);
-@import url(_variaveis.css);
-
 body {
 	background-color: var(--cor-primaria);
 	color: var(--cor-contraste-escuro);
@@ -66,17 +63,17 @@ body {
 
 @media(min-width: 800px) {
 
-  .container {
-	  	/* padding: 1rem; */
-		/* padding-right: 1.75rem;
-		padding-left: 1.75rem;	 */
+  /* .container {
+	  	padding: 1rem;
+		padding-right: 1.75rem;
+		padding-left: 1.75rem;	
 	}
 	.container--foto {
-		/* max-width: 80vw; */
-		/* width: 30vw; */
-		/* height: 0; 
-		padding-bottom: 56.25%; */
-	}
+		max-width: 80vw;
+		width: 30vw;
+		height: 0; 
+		padding-bottom: 56.25%;
+	} */
 }
 
 @media(min-width: 1200px) {
@@ -84,12 +81,12 @@ body {
 	.container--video {
 		max-width: 40vw;
 	}
-	.container--foto {
-		/* max-width: 50vw; */
-		/* width: 30vw; */
-		/* height: 0; 
-		padding-bottom: 56.25%; */
-	}
+	/* .container--foto {
+		max-width: 50vw;
+		width: 30vw;
+		height: 0; 
+		padding-bottom: 56.25%;
+	} */
 }
 
 @media(max-width: 400px) {
