--- a/assets/css/componentes/cartao.css
+++ b/assets/css/componentes/cartao.css
@@ -28,7 +28,8 @@
 
 .cartao__titulo-botao{
     font-size: 28px;
-    margin-bottom: 1rem;   
+    margin-bottom: 0.5rem;
+    text-align: center;  
 }
 
 .cartao__titulo-inscrever{
